Refactor code to use interfaces instead of abstract classes
In multiple parts of the code, abstract classes that represent commands, payloads and queries have been refactored to utilise interfaces instead. Additionally, updates have been made to the handling of exceptions in DemoLifecycleAgent.java, which now no longer print stack trace but simply return null. Lastly, the Evento-Cli version has been updated in multiple Gradle build files. These changes improve flexibility and maintainability of the code.